...
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--Need to add actual activities for adding new meeting-->
                    <Button
...
                        android:layout_height="wrap_content"
                        android:text = "Add New Meeting"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:id = "@+id/btnNewMeeting"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Meetings Scheduled:"
                        android:textSize="20sp"
                        android:id = "@+id/tvMeetings"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id = "@+id/lvMeetings">


                    </ListView>



...
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/lvMembers">
                    </ListView>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id = "@+id/addmembers"
                        android:layout_gravity="center"
                        android:text = "Add Member"/>




                </LinearLayout>

...
