...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/tbMemberName"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/tvMemberName"
        android:layout_toEndOf="@+id/tvMemberName"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />

...
        android:text="Create Group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/btnCreateGroup"
        android:onClick="createGroup" />

    <TextView
        android:text="Member Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/tbMemberEmail"
        android:layout_alignBaseline="@+id/tvMemberEmail"
        android:layout_alignBottom="@+id/tvMemberEmail"
        android:layout_alignLeft="@+id/tbMemberName"
        android:layout_alignStart="@+id/tbMemberName"
        android:hint="example@gmail.com" />
</RelativeLayout>
...
